welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:34: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
		if (getCouleurSol() == Color.pink || Color.orange) {
                                                           ^SlugSnail:40: error: method isFacingTrail has return statement; needs result type
	return sol
        ^