welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
 def hunt(c:Color) {
	while (!estSurBiscuit()) {
		if (isFacingTrail()) {
			avance()
    			baisseBrosse()
    			leveBrosse()
    		}
    		else {
    			droite()
    			if (isFacingTrail()) {
    				avance()
    				baisseBrosse()
    				leveBrosse()
    				}
    			else {
    				droite()
    				droite()
    				if (isFacingTrail()) {
    					avance()
    					baisseBrosse()
    					leveBrosse()
    					}
    				}
    			}
		}
	prendBiscuit()
 }

def isFacingTrail(c:Color) = {
	var sol: Boolean = false;
	if (!estFaceMur()) {
		avance()
		if (getCouleurSol() == Color.pink || Color.orange) {
			recule()
			sol = true;
		}
		else {recule()}
	}
	return sol
}
